--- a/PokeFinder/Base.lproj/Main.storyboard
+++ b/PokeFinder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -54,6 +54,79 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+        </scene>
+        <!--Popover View Controller-->
+        <scene sceneID="WDo-m2-SaW">
+            <objects>
+                <viewController storyboardIdentifier="Popover" id="GMp-x7-eyv" customClass="PopoverViewController" customModule="PokeFinder" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UL9-uy-dvp"/>
+                        <viewControllerLayoutGuide type="bottom" id="VPA-V7-tHS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="825-B6-SKQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="twS-YJ-vlw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GKB-zX-Mvy">
+                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hzk-QC-BqF">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="nfy-UH-7We" customClass="CustomCollectionViewCell" customModule="PokeFinder" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d1I-JJ-aKG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="112"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Fg-t1-qpr">
+                                                    <rect key="frame" x="8" y="121" width="134" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="pokemonImageLabel" destination="d1I-JJ-aKG" id="DFk-ex-RF6"/>
+                                            <outlet property="pokemonNameLabel" destination="3Fg-t1-qpr" id="AXx-28-XZc"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="twS-YJ-vlw" firstAttribute="leading" secondItem="825-B6-SKQ" secondAttribute="leading" id="4ct-EG-AhK"/>
+                            <constraint firstAttribute="trailing" secondItem="GKB-zX-Mvy" secondAttribute="trailing" id="7Kv-Ld-g5p"/>
+                            <constraint firstItem="twS-YJ-vlw" firstAttribute="top" secondItem="825-B6-SKQ" secondAttribute="top" id="bDy-iq-1rZ"/>
+                            <constraint firstItem="GKB-zX-Mvy" firstAttribute="top" secondItem="twS-YJ-vlw" secondAttribute="bottom" id="cyQ-ij-DjV"/>
+                            <constraint firstItem="VPA-V7-tHS" firstAttribute="top" secondItem="GKB-zX-Mvy" secondAttribute="bottom" id="dGl-vg-uXl"/>
+                            <constraint firstItem="GKB-zX-Mvy" firstAttribute="leading" secondItem="825-B6-SKQ" secondAttribute="leading" id="tAW-Ux-rg3"/>
+                            <constraint firstAttribute="trailing" secondItem="twS-YJ-vlw" secondAttribute="trailing" id="uTg-ap-4Q6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="GKB-zX-Mvy" id="4IO-m3-kz4"/>
+                        <outlet property="searchBar" destination="twS-YJ-vlw" id="CwQ-a6-hEU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vhw-iT-GoV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="764" y="138.98050974512745"/>
         </scene>
     </scenes>
     <resources>
