--- a/PokeFinder/Base.lproj/Main.storyboard
+++ b/PokeFinder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -104,6 +104,7 @@
                                         <connections>
                                             <outlet property="pokemonImageLabel" destination="d1I-JJ-aKG" id="DFk-ex-RF6"/>
                                             <outlet property="pokemonNameLabel" destination="3Fg-t1-qpr" id="AXx-28-XZc"/>
+                                            <segue destination="BYZ-38-t0r" kind="show" identifier="unwindToViewController" id="nro-83-EJQ"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
